# abstractgo

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
Frontend/: package.json
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/components/: analytics-dashboard.tsx  circular-gauge.tsx  distribution-analysis.tsx  metric-card.tsx
client/: .env.example  .gitignore  Makefile  index.html  localhost.key  next.config.mjs  package.json  pnpm-lock.yaml
client/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
client/components/: analytics-dashboard.tsx  classification-demo.tsx  confusion-matrix.tsx  distribution-analysis.tsx  export-features.tsx  metric-card.tsx  performance-chart.tsx
client/components/ui/: loading-error.tsx  tabs.tsx
client/config/: api.ts
client/hooks/api/: useClassification.ts  useDashboard.ts
client/hooks/common/: useApi.ts
client/lib/: utils.ts
client/services/api/: index.ts
client/services/classification/: classificationService.ts
client/src/: main.jsx
data-scripts/: Test_model.py
data/raw/: test.csv
deploy/: Makefile  all-in-one-server-entrypoint.sh  docker-compose.yml  docker-compose.yml.example  mcp-server-entrypoint.sh  nginx.conf  nginx.conf.example  run-deploy.sh  run-server.sh  server-entrypoint.sh
deploy/docker_images/: Dockerfile_python_node  Dockerfile_python_only  build_docker_images.sh
documentation/: CONCEPTS.md  FINAL-REPORT.md  PROMPTS.md  abstractgo.final.report.html
mcp-server/: .env.example  LICENSE  Makefile  README.md  claude_desktop_config.json  link_common_assets.sh  mcp_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_mcp_server.sh  vscode_mcp_config.json
notebooks/: AbstractGo_Final_Training_Model.ipynb  README.md
notebooks/sandbox/: Final_Training_Model.ipynb  Initial_Training_Model.ipynb
scripts/: branch_update_from_main.sh  init_app_environment.sh  load_envs.sh  local_ssl_certs_creation.sh
server/: .env.example  Makefile  package.json  pyproject.toml  requirements.txt
server/api/: __init__.py  ai_models.py  dashboard_metrics.py  dashboard_metrics_from_db.py  endpoint_methods.py  json_models.py  main.py  ml_models.py  types.py  utilities.py
server/data/: model_training_data.json
server/test/: curl_tests.sh
(+3 files in other folders)
