[project]
name = "server"
version = "1.0.0"
description = "API for the AbstractGo app"
authors = [
    {name = "Carlos J. Ramirez", email = "tomkat_cr@yahoo.com"},
    {name = "Iver Johan Incapie", email = "iver.hincapie@gmail.com"},
    {name = "Alejandro Arroyave Perez", email = "alejo5600@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "transformers (>=4.55.3,<5.0.0)"
]

[tool.poetry]
packages = [
    { include = "api" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
